--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,15 +26,23 @@
 
   --color-success-50: rgb(var(--success-50));
   --color-success-200: rgb(var(--success-200));
+  --color-success-600: rgb(var(--success-600));
+  --color-success-700: rgb(var(--success-700));
 
   --color-warning-50: rgb(var(--warning-50));
   --color-warning-200: rgb(var(--warning-200));
+  --color-warning-600: rgb(var(--warning-600));
+  --color-warning-700: rgb(var(--warning-700));
 
   --color-danger-50: rgb(var(--danger-50));
   --color-danger-200: rgb(var(--danger-200));
+  --color-danger-600: rgb(var(--danger-600));
+  --color-danger-700: rgb(var(--danger-700));
 
   --color-info-50: rgb(var(--info-50));
   --color-info-200: rgb(var(--info-200));
+  --color-info-600: rgb(var(--info-600));
+  --color-info-700: rgb(var(--info-700));
 }
 
 /* 2) Design tokens */
@@ -67,17 +75,29 @@
   --shadow-sm: 0 1px 2px rgba(0, 0, 0, 0.06);
   --shadow-md: 0 8px 20px rgba(0, 0, 0, 0.08);
 
+  /* success */
   --success-50: 240 253 244;
   --success-200: 187 247 208;
+  --success-600: 22 163 74;
+  --success-700: 21 128 61;
 
-  --warning-50: 255 251 235;
-  --warning-200: 254 215 170;
+  /* warning */
+  --warning-50: 255 247 237; /* orange-50 */
+  --warning-200: 254 215 170; /* 기존 유지 */
+  --warning-600: 234 88 12; /* orange-600 */
+  --warning-700: 194 65 12; /* orange-700 */
 
+  /* danger */
   --danger-50: 254 242 242;
   --danger-200: 254 202 202;
+  --danger-600: 220 38 38;
+  --danger-700: 185 28 28;
 
+  /* info */
   --info-50: 239 246 255;
   --info-200: 191 219 254;
+  --info-600: 37 99 235;
+  --info-700: 29 78 216;
 }
 
 /* 다크모드 보류
