design: typography 계층 세분화

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -130,6 +130,8 @@ html {
 body {
   background: rgb(var(--bg));
   color: rgb(var(--fg));
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 /* 4) Legacy table styling */
